[package]
name = "watch_for_me"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
reqwest = "0.11.4"
soup = "0.5.1"
telegram-bot = "0.8.0"
teloxide-core = "0.3.3"
tokio = { version = "1.10.0", features = ["full"] }

[profile.release]
codegen-units=1
